# embeddings-lore

./: .gitignore  README.md  pyproject.toml
app/: config.py  db.py  indexer.py  main.py  registry.py
app/routers/: index.py  models.py  similarity.py
config/: config.yaml
